feat: add sample graph, split bigNerdRanch Vis into separate file

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
       <button onclick="document.getElementById('audioElement').volume+=0.1">Increase Volume</button>
       <button onclick="document.getElementById('audioElement').volume-=0.1">Decrease Volume</button>
     </div>
+    <div id="bigNerdRanchVis"></div>
+    <div id="sampleGraph"></div>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   </body>
 </html>
