feat: enable custom file input

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <input id="fileInput" type="file" accept="audio/*">choose your own file</input>
     <audio id="audioElement" src="./audio/Odesza-Above_The_Middle.mp3"></audio>
     <div>
       <button onclick="document.getElementById('audioElement').play()">Play the Audio</button>
