--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     </div>
     <div id="bigNerdRanchVis"></div>
     <div id="sampleGraph"></div>
+    <div id="timeSpectrogram"></div>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   </body>
 </html>
