--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Big Nerd Ranch D3 Blog Post</title>
-  </head>
 
-  <body>
-    <input id="fileInput" type="file" accept="audio/*">choose your own file</input>
-    <audio id="audioElement" src="./audio/Odesza-Above_The_Middle.mp3"></audio>
-    <div>
-      <button onclick="document.getElementById('audioElement').play()">Play the Audio</button>
-      <button onclick="document.getElementById('audioElement').pause()">Pause the Audio</button>
-      <button onclick="document.getElementById('audioElement').volume+=0.1">Increase Volume</button>
-      <button onclick="document.getElementById('audioElement').volume-=0.1">Decrease Volume</button>
-    </div>
-    <div id="bigNerdRanchVis"></div>
-    <div id="sampleGraph"></div>
-    <div id="timeSpectrogram"></div>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Big Nerd Ranch D3 Blog Post</title>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.7/chroma.min.js"></script>
+</head>
+
+<body>
+  <input id="fileInput" type="file" accept="audio/*">choose your own file</input>
+  <audio id="audioElement" src="./audio/Odesza-Above_The_Middle.mp3"></audio>
+  <div>
+    <button onclick="document.getElementById('audioElement').play()">Play the Audio</button>
+    <button onclick="document.getElementById('audioElement').pause()">Pause the Audio</button>
+    <button onclick="document.getElementById('audioElement').volume+=0.1">Increase Volume</button>
+    <button onclick="document.getElementById('audioElement').volume-=0.1">Decrease Volume</button>
+  </div>
+  <div id="bigNerdRanchVis"></div>
+  
+  <canvas id="modCanvas" width="800" height="512" style="display: block; background-color: pink ;"></canvas>
+  <canvas id="canvas" width="800" height="512" style="display: block; background-color: blue ;"></canvas>
+  
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+</body>
+
 </html>
