--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Big Nerd Ranch D3 Blog Post</title>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.7/chroma.min.js"></script>
+  <style src="./bundle.js"></style>
 </head>
 
 <body>
@@ -18,12 +19,12 @@
     <button onclick="document.getElementById('audioElement').volume+=0.1">Increase Volume</button>
     <button onclick="document.getElementById('audioElement').volume-=0.1">Decrease Volume</button>
   </div>
-  <div>
-    <div id="bigNerdRanchVis"></div>
-    <canvas id="modCanvas" width="800" height="512" style="display: block; background-color: pink ;"></canvas>
+  <div class="visContainer">
+    <div id="spectrogramVis"></div>
+    <div id="verticalFrequencyVis"></div>
   </div>
-  <canvas id="canvas" width="800" height="512" style="display: block; background-color: blue ;"></canvas>
-  
+  <!-- <canvas id="canvas" width="800" height="512" style="display: block; background-color: blue ;"></canvas> -->
+
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 </body>
 
