feat: add horiz scroll rate and chroma props to Vises, wip zooming

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <div id="spectrogramVis"></div>
     <div id="verticalFrequencyVis"></div>
   </div>
+  <canvas id="gkheadCanvas"></canvas>
 </body>
 
 </html>
