--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,12 @@
   <div class="navBox">
     <img class="logo" src="./pong.svg">
     <div class="logoText">BROAMP</div>
-    <input id="fileInput" type="file" accept="audio/*">choose your own file</input>
+    <input id="fileInput" type="file" accept="audio/*"></input>
     <audio id="audioElement"></audio>
     <div class="buttonsBox">
-      <button id="togglePlayButton" onclick="document.getElementById('audioElement').play()">Play the Audio</button>
-      <button onclick="document.getElementById('audioElement').pause()">Pause the Audio</button>
-      <button onclick="document.getElementById('audioElement').volume+=0.1">Increase Volume</button>
-      <button onclick="document.getElementById('audioElement').volume-=0.1">Decrease Volume</button>
+      <button id="togglePlayButton">▶️</button>
+      <button onclick="document.getElementById('audioElement').volume+=0.02">🔈🔼</button>
+      <button onclick="document.getElementById('audioElement').volume-=0.02">🔈🔽</button>
     </div>
   </div>
   <div class="visBox">
