--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>BroAmp</title>
+  <title>bro_amp 🔊</title>
   <style src="./bundle.js"></style>
 </head>
 
@@ -15,8 +15,8 @@
     <audio id="audioElement"></audio>
     <div class="buttonsBox">
       <button id="togglePlayButton">▶️</button>
-      <button onclick="document.getElementById('audioElement').volume+=0.02">🔈🔼</button>
-      <button onclick="document.getElementById('audioElement').volume-=0.02">🔈🔽</button>
+      <button onclick="document.getElementById('audioElement').volume+=0.02">🔊</button>
+      <button onclick="document.getElementById('audioElement').volume-=0.02">🔈</button>
     </div>
   </div>
   <div class="visBox">
