feat: make page responsive-ish

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <div class="bodyBox">
     <div class="navBox">
       <div class="logoBox">
-        <img class="logo" src="./pong.svg">
+        <img class="logo" src="./images/pong.svg">
         <div class="logoText">BROAMP</div>
       </div>
       <div class="inputBox">
